@@ -50,6 +50,9 @@ Persch).
 provoke a buffer overflow. This bug was discovered by Karl Skomski with the
 LLVM fuzzer.
 
+14. Fix infinite recursion in the JIT compiler when certain patterns such as
+/(?:|a|){100}x/ are analysed.
+
 
 Version 10.20 30-June-2015
 --------------------------
